--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -120,14 +120,11 @@
   <data name="Account type" xml:space="preserve">
     <value>Soort rekening</value>
   </data>
-  <data name="Annual investment fee review" xml:space="preserve">
-    <value>Jaarlikse beleggingsgeldehersiening</value>
+  <data name="April" xml:space="preserve">
+    <value>April</value>
   </data>
-  <data name="As part of our annual pricing review, some of our fees have changed. You can view our 2022 pricing guide on the Nedbank website." xml:space="preserve">
-    <value>As deel van ons jaarlikse prysingshersiening hetsommige van ons gelde verander. Jy kan op dieNedbank-webwerf na ons 2022-prysingsgids gaankyk.</value>
-  </data>
-  <data name="Automatic reinvestment when your investment matures" xml:space="preserve">
-    <value>Outomatiese herbelegging wanneer ubelegging uitkeer</value>
+  <data name="August" xml:space="preserve">
+    <value>Augustus</value>
   </data>
   <data name="Balance" xml:space="preserve">
     <value>Saldo</value>
@@ -137,9 +134,6 @@
   </data>
   <data name="Breakdown of your investment accounts" xml:space="preserve">
     <value>Uiteensetting van u beleggingsrekenings</value>
-  </data>
-  <data name="Click here for more information." xml:space="preserve">
-    <value>Kliek vir meer inligting.</value>
   </data>
   <data name="Closing balance" xml:space="preserve">
     <value>Eindsaldo</value>
@@ -162,17 +156,20 @@
   <data name="Debit" xml:space="preserve">
     <value>Debiet</value>
   </data>
+  <data name="December" xml:space="preserve">
+    <value>Desember</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>Beskrywing</value>
   </data>
   <data name="Explanatory notes" xml:space="preserve">
     <value>Verklarende aantekeninge</value>
   </data>
+  <data name="February" xml:space="preserve">
+    <value>Februarie</value>
+  </data>
   <data name="Fixed deposits" xml:space="preserve">
     <value>Vaste deposito's</value>
-  </data>
-  <data name="If you do not want to click on a link, please type the following address in your browser (without the asterisks):" xml:space="preserve">
-    <value>As jy nie op ’n skakel wil klik nie, tik asseblief dievolgende adres in jou blaaier in (sonder die asteriske):</value>
   </data>
   <data name="Interest disposal" xml:space="preserve">
     <value>Rentebeskikking</value>
@@ -195,8 +192,23 @@
   <data name="Investor performance" xml:space="preserve">
     <value>Beleggersprestasie</value>
   </data>
+  <data name="January" xml:space="preserve">
+    <value>Januarie</value>
+  </data>
+  <data name="July" xml:space="preserve">
+    <value>Julie</value>
+  </data>
+  <data name="June" xml:space="preserve">
+    <value>Junie</value>
+  </data>
+  <data name="March" xml:space="preserve">
+    <value>Maart</value>
+  </data>
   <data name="Maturity date" xml:space="preserve">
     <value>Vervaldatum</value>
+  </data>
+  <data name="May" xml:space="preserve">
+    <value>Mei</value>
   </data>
   <data name="Nedbank Ltd Reg No 1951/000009/06. Authorised financial services and registered credit provider (NCRCP16)." xml:space="preserve">
     <value>Nedbank Bpk Reg No 1951/000009/06. Gemagtigde finansiële diens- en geregistreerde kredietverskaffer (NCRCP16).</value>
@@ -207,11 +219,20 @@
   <data name="Notice period" xml:space="preserve">
     <value>Kennistydperk</value>
   </data>
+  <data name="November" xml:space="preserve">
+    <value>November</value>
+  </data>
+  <data name="October" xml:space="preserve">
+    <value>Oktober</value>
+  </data>
   <data name="Opening balance" xml:space="preserve">
     <value>Beginsaldo</value>
   </data>
   <data name="Opening date" xml:space="preserve">
     <value>Openingsdatum</value>
+  </data>
+  <data name="September" xml:space="preserve">
+    <value>September</value>
   </data>
   <data name="Services" xml:space="preserve">
     <value>Dienste</value>
