Added Home Loan Wealth Statement Functionality

--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -624,4 +624,7 @@
   <data name="Your banker" xml:space="preserve">
     <value>Your banker</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value />
+  </data>
 </root>
