--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -627,4 +627,7 @@
   <data name="String1" xml:space="preserve">
     <value />
   </data>
+  <data name="Bond no:" xml:space="preserve">
+    <value>Verbandno:</value>
+  </data>
 </root>
