Changes for home loan statement

--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -303,7 +303,7 @@
   <data name="Avo Business" xml:space="preserve">
     <value>Avo-sake</value>
   </data>
-  <data name="Balance Outstanding" xml:space="preserve">
+  <data name="Balance outstanding" xml:space="preserve">
     <value>Uitstaande saldo</value>
   </data>
   <data name="Basic instalment" xml:space="preserve">
