--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -630,4 +630,121 @@
   <data name="Bond no:" xml:space="preserve">
     <value>Verbandno:</value>
   </data>
+  <data name="Account no" xml:space="preserve">
+    <value>Rekening no</value>
+  </data>
+  <data name="Agent contact details" xml:space="preserve">
+    <value>Agent kontak no</value>
+  </data>
+  <data name="Branch code" xml:space="preserve">
+    <value>Takkode</value>
+  </data>
+  <data name="Client details" xml:space="preserve">
+    <value>Kliënt besonderhede</value>
+  </data>
+  <data name="Corporate Saver statement" xml:space="preserve">
+    <value>Corporate Saver staat</value>
+  </data>
+  <data name="Agent's profile" xml:space="preserve">
+    <value>Agent se profiel</value>
+  </data>
+  <data name="CIF no" xml:space="preserve">
+    <value>Kliënt-CIF no</value>
+  </data>
+  <data name="Client code" xml:space="preserve">
+    <value>Kliëntkode</value>
+  </data>
+  <data name="Client VAT no" xml:space="preserve">
+    <value>Kliënt-BTW no</value>
+  </data>
+  <data name="Contact person" xml:space="preserve">
+    <value>Kontak persoon</value>
+  </data>
+  <data name="Relationship manager" xml:space="preserve">
+    <value>Verhoudingsbestuurder</value>
+  </data>
+  <data name="Tax invoice no" xml:space="preserve">
+    <value>Belastingfaktuur no</value>
+  </data>
+  <data name="VAT calculation" xml:space="preserve">
+    <value>BTW-berekening</value>
+  </data>
+  <data name="Agent fee deducted" xml:space="preserve">
+    <value>Agentgelde afgetrek</value>
+  </data>
+  <data name="Agent fee structure" xml:space="preserve">
+    <value>Agentgeldestruktuur</value>
+  </data>
+  <data name="Agent reference" xml:space="preserve">
+    <value>Agent verwysing</value>
+  </data>
+  <data name="Call transaction details for the period" xml:space="preserve">
+    <value>Daggeldtransaksies vir die tydperk</value>
+  </data>
+  <data name="Capital" xml:space="preserve">
+    <value>Kapitaal</value>
+  </data>
+  <data name="Capital balance" xml:space="preserve">
+    <value>Kapitaalsaldo</value>
+  </data>
+  <data name="Current investment details" xml:space="preserve">
+    <value>Huidige belegging</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Datum</value>
+  </data>
+  <data name="Date invested" xml:space="preserve">
+    <value>Belê op</value>
+  </data>
+  <data name="Email address" xml:space="preserve">
+    <value>Epos</value>
+  </data>
+  <data name="FSP license no" xml:space="preserve">
+    <value>FDV- lisensie no</value>
+  </data>
+  <data name="Important information" xml:space="preserve">
+    <value>Aantekening</value>
+  </data>
+  <data name="Interest (less agent fee and VAT)" xml:space="preserve">
+    <value>Rente (min agentgelde en BTW)</value>
+  </data>
+  <data name="Interest instruction" xml:space="preserve">
+    <value>Renteopdrag</value>
+  </data>
+  <data name="Investment portfolio at" xml:space="preserve">
+    <value>Beleggingsportefeulje soos op</value>
+  </data>
+  <data name="Payment details" xml:space="preserve">
+    <value>Betalingsbesonderhede</value>
+  </data>
+  <data name="Rate" xml:space="preserve">
+    <value>Koers</value>
+  </data>
+  <data name="Registration no" xml:space="preserve">
+    <value>Registrasie no</value>
+  </data>
+  <data name="Statement no" xml:space="preserve">
+    <value>Staat no</value>
+  </data>
+  <data name="Tax totals" xml:space="preserve">
+    <value>Belastingtotale</value>
+  </data>
+  <data name="Tax totals (year to date)" xml:space="preserve">
+    <value>Belastingtotale (jaar tot op datum)</value>
+  </data>
+  <data name="Total agent fee (deducted)" xml:space="preserve">
+    <value>Agentgelde afgetrek</value>
+  </data>
+  <data name="Total capital" xml:space="preserve">
+    <value>Kapitaaltotaal</value>
+  </data>
+  <data name="Total interest" xml:space="preserve">
+    <value>Rente totaal</value>
+  </data>
+  <data name="VAT on fee" xml:space="preserve">
+    <value>BTW op gelde</value>
+  </data>
+  <data name="VAT registration no" xml:space="preserve">
+    <value>BTW-registrasie no</value>
+  </data>
 </root>
