Changes for Statement of HL, PL and MCA

--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -138,8 +138,8 @@
   <data name="Closing balance" xml:space="preserve">
     <value>Eindsaldo</value>
   </data>
-  <data name="Contact centre" xml:space="preserve">
-    <value>24/7-kontaksentrum</value>
+  <data name="Contact Centre" xml:space="preserve">
+    <value>Kontaksentrum</value>
   </data>
   <data name="Credit" xml:space="preserve">
     <value>Krediet</value>
