--- a/Manager/Properties/Resources.resx
+++ b/Manager/Properties/Resources.resx
@@ -723,8 +723,8 @@
   <data name="Registration no" xml:space="preserve">
     <value>Registrasie no</value>
   </data>
-  <data name="Statement no" xml:space="preserve">
-    <value>Staat no</value>
+  <data name="Statement" xml:space="preserve">
+    <value>Staat</value>
   </data>
   <data name="Tax totals" xml:space="preserve">
     <value>Belastingtotale</value>
@@ -747,9 +747,6 @@
   <data name="VAT registration no" xml:space="preserve">
     <value>BTW-registrasie no</value>
   </data>
-  <data name="Statement" xml:space="preserve">
-    <value>staat</value>
-  </data>
   <data name="Authorised financial services and registered credit provider (NCRCP16)" xml:space="preserve">
     <value>Gemagtigde finansiële diens- en geregistreerde kredietverskaffer (NCRCP16)</value>
   </data>
@@ -763,7 +760,7 @@ en</value>
   <data name="in accordance with the mandate held" xml:space="preserve">
     <value>in ooreenstemming met die mandaat wat gehou word</value>
   </data>
-  <data name="is credited to your account in Maart" xml:space="preserve">
+  <data name="is credited to your" xml:space="preserve">
     <value>word in Maart op u rekening gekrediteer</value>
   </data>
   <data name="less agent administration fee and VAT" xml:space="preserve">
@@ -781,5 +778,26 @@ en namens u aan u agent betaal</value>
   </data>
   <data name="VAT are deducted in" xml:space="preserve">
     <value>BTW word in</value>
+  </data>
+  <data name="Agent details" xml:space="preserve">
+    <value>Agent besonderhede</value>
+  </data>
+  <data name="Client details" xml:space="preserve">
+    <value>Kliënt besonderhede</value>
+  </data>
+  <data name="less agent fee" xml:space="preserve">
+    <value>min agentgelde</value>
+  </data>
+  <data name="Not provided" xml:space="preserve">
+    <value>Nie verskaf nie</value>
+  </data>
+  <data name="on capital" xml:space="preserve">
+    <value>Van rente</value>
+  </data>
+  <data name="to" xml:space="preserve">
+    <value>tot</value>
+  </data>
+  <data name="VAT" xml:space="preserve">
+    <value>BTW</value>
   </data>
 </root>
